--- a/exts/nikoraes.customdataview/config/extension.toml
+++ b/exts/nikoraes.customdataview/config/extension.toml
@@ -6,11 +6,11 @@ version = "1.0.0"
 authors = ["NVIDIA"]
 
 # The title and description fields are primarily for displaying extension info in UI
-title = "nikoraes customdataview"
-description="A simple python extension example to use as a starting point for your extensions."
+title = "CustomData View"
+description = "An extension to display the custom data attributes for the selected Prim"
 
 # Path (relative to the root) or content of readme markdown file for UI.
-readme  = "docs/README.md"
+readme = "docs/README.md"
 
 # URL of the extension source repository.
 repository = ""
@@ -23,7 +23,7 @@ keywords = ["kit", "example"]
 
 # Location of change log file in target (final) folder of extension, relative to the root.
 # More info on writing changelog: https://keepachangelog.com/en/1.0.0/
-changelog="docs/CHANGELOG.md"
+changelog = "docs/CHANGELOG.md"
 
 # Preview image and icon. Folder named "data" automatically goes in git lfs (see .gitattributes file).
 # Preview image is shown in "Overview" of Extensions window. Screenshot of an extension might be a good preview image.
@@ -43,5 +43,5 @@ name = "nikoraes.customdataview"
 [[test]]
 # Extra dependencies only to be used during test run
 dependencies = [
-    "omni.kit.ui_test" # UI testing extension
+    "omni.kit.ui_test", # UI testing extension
 ]
